--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.mvc.view.prefix: /WEB-INF/pages/
 spring.mvc.view.suffix: .jsp
 
 =========================API==================================
-REST.SERVICE.URI = http://localhost:8020/
+#REST.SERVICE.URI = http://localhost:8020/
+REST.SERVICE.URI = https://springcrudpostgresql.herokuapp.com/
 API.All.CUSTOMER = listCustomer/
 API.SAVE.CUSTOMER = customer/add/
 API.GET.CUSTOMER = customerGetId/
