--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 		    <version>2.8.5</version>
 		</dependency>
 				
+		<!-- Javax Transaction API -->
+		<dependency>
+		    <groupId>javax.transaction</groupId>
+		    <artifactId>javax.transaction-api</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
