changes uri api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.mvc.view.suffix: .jsp
 =========================API==================================
 #REST.SERVICE.URI = http://localhost:8020/
 REST.SERVICE.URI = https://springcrudpostgresql.herokuapp.com/
-API.All.CUSTOMER = listCustomer/
-API.SAVE.CUSTOMER = customer/add/
-API.GET.CUSTOMER = customerGetId/
-API.EDIT.CUSTOMER = customer/edit/
-API.DELETE.CUSTOMER = customer/delete/
+API.All.CUSTOMER = ws/listCustomer/
+API.SAVE.CUSTOMER = ws/customer/add/
+API.GET.CUSTOMER = ws/customerGetId/
+API.EDIT.CUSTOMER = ws/customer/edit/
+API.DELETE.CUSTOMER = ws/customer/delete/
